--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2700,6 +2700,10 @@
     "@pagebuilder_config_menu_hover_switch": {
         "description": "Title of the hover switch in the hover tab in the pagebuilder config menu"
     },
+    "pagebuilder_anchor_button_config_title": "Anchor Button Configuration",
+    "@pagebuilder_anchor_button_config_title": {
+        "description": "Title for the collapsible view for the anchor button configuration in the pagebuilder config menu"
+    },
     "pagebuilder_anchor_button_content_section_name": "Section Name",
     "@pagebuilder_anchor_button_content_section_name": {
         "description": "Title for the collapsible view for the anchor button section name in the pagebuilder anchor button configuration"
@@ -2711,6 +2715,10 @@
     "pagebuilder_anchor_button_content_no_sections_available": "No sections available",
     "@pagebuilder_anchor_button_content_no_sections_available": {
         "description": "Message shown when no sections are available for selection in the anchor button configuration"
+    },
+    "pagebuilder_anchor_button_content_section_name_placeholder": "Please select",
+    "@pagebuilder_anchor_button_content_section_name_placeholder": {
+        "description": "Placeholder text for the section name dropdown in the anchor button config menu when no section is selected yet"
     },
     "pagebuilder_section_id": "ID:",
     "@pagebuilder_section_id": {
