--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1783,6 +1783,18 @@
     "@pagebuilder_image_config_border_radius": {
         "description": "Titel für Radius Menüpunkt in Bild Konfiguration im Pagebuilder Config Menü"
     },
+    "pagebuilder_image_config_border_title": "Rahmen",
+    "@pagebuilder_image_config_border_title": {
+        "description": "Titel für Rahmen Sektion in Bild Konfiguration im Pagebuilder Config Menü"
+    },
+    "pagebuilder_image_config_border_width": "Rahmenbreite",
+    "@pagebuilder_image_config_border_width": {
+        "description": "Titel für Rahmenbreite Menüpunkt in Bild Konfiguration im Pagebuilder Config Menü"
+    },
+    "pagebuilder_image_config_border_color": "Rahmenfarbe",
+    "@pagebuilder_image_config_border_color": {
+        "description": "Titel für Rahmenfarbe Menüpunkt in Bild Konfiguration im Pagebuilder Config Menü"
+    },
     "pagebuilder_image_config_image_content": "Bild Inhalt",
     "@pagebuilder_image_config_image_content": {
         "description": "Titel für Bild Inhalt Menü im Pagebuilder Config Menü"
@@ -1794,6 +1806,18 @@
     "landingpage_pagebuilder_container_config_container_shadow": "Schatten",
     "@landingpage_pagebuilder_container_config_container_shadow": {
         "description": "Titel für die Schatten Konfiguration in der Pagebuilder Container Konfiguration"
+    },
+    "landingpage_pagebuilder_container_config_container_border_title": "Rahmen",
+    "@landingpage_pagebuilder_container_config_container_border_title": {
+        "description": "Titel für Rahmen Sektion in der Container Konfiguration im Pagebuilder Config Menü"
+    },
+    "landingpage_pagebuilder_container_config_container_border_width": "Rahmenbreite",
+    "@landingpage_pagebuilder_container_config_container_border_width": {
+        "description": "Titel für Rahmenbreite in der Container Konfiguration im Pagebuilder Config Menü"
+    },
+    "landingpage_pagebuilder_container_config_container_border_color": "Rahmenfarbe",
+    "@landingpage_pagebuilder_container_config_container_border_color": {
+        "description": "Titel für Rahmenfarbe in der Container Konfiguration im Pagebuilder Config Menü"
     },
     "landingpage_pagebuilder_row_config_row_title": "Reihe Konfiguration",
     "@landingpage_pagebuilder_row_config_row_title": {
@@ -1871,13 +1895,25 @@
     "@pagebuilder_button_config_button_height": {
         "description": "Menüpunkt für Button Höhe in der Button Konfiguration im Pagebuilder Config Menü"
     },
+    "pagebuilder_button_config_button_background_color": "Hintergrundfarbe",
+    "@pagebuilder_button_config_button_background_color": {
+        "description": "Menüpunkt für Button Hintergrundfarbe in der Button Konfiguration im Pagebuilder Config Menü"
+    },
+    "pagebuilder_button_config_button_border_title": "Rahmen",
+    "@pagebuilder_button_config_button_border_title": {
+        "description": "Titel für Rahmen Sektion in der Button Konfiguration im Pagebuilder Config Menü"
+    },
     "pagebuilder_button_config_button_border_radius": "Radius",
     "@pagebuilder_button_config_button_border_radius": {
         "description": "Menüpunkt für Button Radius in der Button Konfiguration im Pagebuilder Config Menü"
     },
-    "pagebuilder_button_config_button_background_color": "Hintergrundfarbe",
-    "@pagebuilder_button_config_button_background_color": {
-        "description": "Menüpunkt für Button Hintergrundfarbe in der Button Konfiguration im Pagebuilder Config Menü"
+    "pagebuilder_button_config_button_border_width": "Rahmenbreite",
+    "@pagebuilder_button_config_button_border_width": {
+        "description": "Menüpunkt für Button Rahmenbreite in der Button Konfiguration im Pagebuilder Config Menü"
+    },
+    "pagebuilder_button_config_button_border_color": "Rahmenfarbe",
+    "@pagebuilder_button_config_button_border_color": {
+        "description": "Menüpunkt für Button Rahmenfarbe in der Button Konfiguration im Pagebuilder Config Menü"
     },
     "pagebuilder_button_config_button_text_configuration": "Button Text Konfiguration",
     "@pagebuilder_button_config_button_text_configuration": {
