--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -3477,5 +3477,13 @@
     "pagebuilder_html_text_editor_background_color": "Editor Hintergrundfarbe",
     "@pagebuilder_html_text_editor_background_color": {
         "description": "Label für die Hintergrundfarbe des HTML Text Editors"
+    },
+    "pagebuilder_widget_controls_edit": "Bearbeiten",
+    "@pagebuilder_widget_controls_edit": {
+        "description": "Label für den Bearbeiten-Button in den Widget Controls"
+    },
+    "pagebuilder_widget_controls_delete": "Löschen",
+    "@pagebuilder_widget_controls_delete": {
+        "description": "Label für den Löschen-Button in den Widget Controls"
     }
 }
