--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -3486,6 +3486,10 @@
     "@pagebuilder_widget_controls_delete": {
         "description": "Label für den Löschen-Button in den Widget Controls"
     },
+    "pagebuilder_widget_controls_duplicate": "Duplizieren",
+    "@pagebuilder_widget_controls_duplicate": {
+        "description": "Label für den Duplizieren-Button in den Widget Controls"
+    },
     "pagebuilder_section_controls_duplicate": "Duplizieren",
     "@pagebuilder_section_controls_duplicate": {
         "description": "Label für den Duplizieren-Button in den Section Controls"
