--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3486,6 +3486,10 @@
     "@pagebuilder_widget_controls_delete": {
         "description": "Label for the delete button in the widget controls"
     },
+    "pagebuilder_widget_controls_duplicate": "Duplicate",
+    "@pagebuilder_widget_controls_duplicate": {
+        "description": "Label for the duplicate button in the widget controls"
+    },
     "pagebuilder_section_controls_duplicate": "Duplicate",
     "@pagebuilder_section_controls_duplicate": {
         "description": "Label for the duplicate button in the section controls"
